--- a/cs final proj/style2.css
+++ b/cs final proj/style2.css
@@ -36,7 +36,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #ffd700;
+    color: #ff008f;
 }
 
 main {
@@ -47,6 +47,7 @@ main {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+    position: relative;
 }
 
 main h2 {
@@ -57,6 +58,23 @@ main h2 {
 
 main p {
     font-size: 1.2em;
+}
+
+main img {
+    float: left;
+    margin-right: 20px;
+    width: 350px; 
+    height: 400px; 
+    transition: transform 0.5s ease-in-out, width 0.5s ease-in-out, height 0.5s ease-in-out;
+    object-fit: cover; 
+}
+
+main img:hover {
+    transform: scale(1.2); 
+    width: 400px; 
+    height: auto; 
+    position: relative; 
+    margin-right: 20px; 
 }
 
 footer {
